======== making a new DFHack release, even if the only changes made     ========
======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features
- `stocks`: add button/hotkey for removing empty categories from the stocks list

## Fixes

## Misc Improvements
- When launched from the Steam client on Linux, both Dwarf Fortress and DFHack will be shown as "Running". This ensures that DF has proper accounting for Linux player usage.
- `suspendmanager`: port to C++ to decrease impact on framerate

## Documentation
- `overlay-dev-guide`: updated examples and troubleshooting steps

## API

## Lua
- ``widgets.Label``: ``text_pen``, ``text_dpen``, and ``text_hpen`` can either be a pen or a function that dynamically returns a pen
- `helpdb`: ``search_entries`` now returns a match if *all* filters in the ``include`` list are matched. previous behavior was to match if *any* ``include`` filter matched.

## Removed

# 50.11-r7

## New Tools
- `tweak`: (reinstated) a collection of small bugfixes and gameplay tweaks
- `pet-uncapper`: (reinstated, renamed from ``petcapRemover``) allow pets to breed beyond the default population cap of 50

## New Features
- `cleanowned`: Add a "nodump" option to allow for confiscating items without dumping
- `tweak`: Add "flask-contents", makes flasks/vials/waterskins be named according to their contents

## Fixes
- `dig`: overlay that shows damp designations in ASCII mode now propertly highlights tiles that are damp because of an aquifer in the layer above
- `dig-now`: fix digging stairs in the surface sometimes creating underworld gates.
- ``Units::getVisibleName``: don't reveal the true identities of units that are impersonating other historical figures
- ``Gui::revealInDwarfmodeMap``: properly center the zoom even when the target tile is near the edge of the map