@@ -59,6 +59,7 @@ Template for new versions:
 ## Fixes
 
 ## Misc Improvements
+- `autobutcher`: prefer butchering partially trained animals and saving fully domesticated animals to assist in wildlife domestication programs
 - When launched from the Steam client on Linux, both Dwarf Fortress and DFHack will be shown as "Running". This ensures that DF has proper accounting for Linux player usage.
 - `suspendmanager`: port to C++ to decrease impact on framerate
 
